# research.md

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  PROPOSAL-evidence-gathering-gates.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
.forge/: manifest.yaml
.github/workflows/: ci.yml
.ike/: ike.json
.ike/milestones/: MS-0001 - phase-1-source-provenance-gates.md  MS-0002 - phase-2-depth-and-rigor-enforcement.md
.ike/tasks/: TASK-0001 - add-web-research-nudge-to-finding-create.md  TASK-0002 - clarify-high-vs-confirmed-evidence-grade-semantics.md  TASK-0003 - remove-legacy-typescript-code.md  TASK-0004 - add-python-tests-for-evidence-gates.md
.research/: research.json
.research/findings/: 0001-the-gap-research-md-enforces-downstream-rigor-but-not-upstream-evidence-gathering.md  0002-source-triangulation-2-independent-sources-required-for-confirmed-grade.md  0005-landscape-scan-agents-should-widen-before-narrowing-to-candidates.md  (+2 more)
.visionlog/: config.yaml  vision.md
demo/: README.md
refactor/: capture-edge-cases.mjs  capture-fixtures.mjs  verify-fixtures.py
research_md/: __init__.py  config.py  errors.py  files.py  gates.py  integrity.py  security.py  server.py
src/: config.ts  errors.ts  files.ts  gates.ts  index.ts  integrity.ts  pdf_brand.py  render-brief.py  resources.ts  security.ts  server.ts
templates/: adr.md  candidate.md  decision-criteria.md  finding.md
test/: config.test.ts  gates.test.ts  security.test.ts
tests/: test_evidence_gates.py  test_integration.py  test_yaml_serializer.py
(+93 files in other folders)
