[project]
name = "research-md"
version = "0.4.1"
description = "The decision forge — evidence-graded, phase-gated, peer-reviewed decisions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Daniel Shanklin", email = "daniel@eidosagi.com" },
]
keywords = ["mcp", "research", "decisions", "evidence", "agent-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
research-md = "research_md.server:main"

[project.entry-points."mcp"]
research-md = "research_md.server:mcp"

[project.urls]
Homepage = "https://github.com/eidos-agi/research.md"
Repository = "https://github.com/eidos-agi/research.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research_md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
